@@ -1,5 +1,6 @@
 [Desktop Entry]
 Name=Font Catalogue
 Comment=Font Catalogue
-Type=Directory
 Icon=font-capplet
+Type=Directory
+Encoding=UTF-8
