@@ -1,3 +1,8 @@
+2006-07-23  Sebastien Bacher  <seb128@debian.org>
+
+	* font-method.directory.in: add encoding key, 
+	patch by Vincent Fretin <vincent.fretin@gmail.com> (Closes: #338593)
+
 2006-04-05  Glynn Foster <glynn.foster@sun.com>
 
 	* Makefile.am: Move the .directory files to 
